--- a/src/assets/scss/components/_cta.scss
+++ b/src/assets/scss/components/_cta.scss
@@ -10,4 +10,12 @@
   width: 50%;
   text-align: center;
   line-height: 30px;
+
+  p {
+    margin-top: 0;
+  }
+
+  @media (max-width: 768px) {
+    width: 80%;
+  }
 }
