--- a/src/assets/scss/components/_footer.scss
+++ b/src/assets/scss/components/_footer.scss
@@ -26,7 +26,7 @@
       width: 140px;
     }
 
-    @media (max-width: 992px) {
+    @media (max-width: 768px) {
       margin-bottom: 20px;
     }
   }
@@ -41,13 +41,16 @@
   padding: 0 30px;
 
   @media (max-width: 992px) {
+    padding: 0 10px;
+  }
+
+  @media (max-width: 768px) {
     width: 100%;
     padding: 0;
     text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
-    //border-bottom: 1px solid red;
   }
 }
 
@@ -155,7 +158,7 @@
 }
 
 .tel {
-  @media (max-width: 992px) {
+  @media (max-width: 768px) {
     margin-bottom: 20px;
   }
 }
