--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -24,6 +24,7 @@
   'components/_cta',
   'components/_footer-nav',
   'components/_footer',
+  'components/_header-page-bot',
   'components/_top-bar',
   'components/_modals',
   'components/_nav',
