--- a/src/assets/scss/ui/_buttons.scss
+++ b/src/assets/scss/ui/_buttons.scss
@@ -10,7 +10,7 @@ button {
   cursor: pointer;
   text-decoration: none;
   display: inline-flex;
-  align-items:center;
+  align-items: center;
   transition: all 0.2s ease-in-out;
   text-transform: uppercase;
   font-size: 12px;
@@ -31,7 +31,7 @@ button {
   cursor: pointer;
   text-decoration: none;
   display: inline-flex;
-  align-items:center;
+  align-items: center;
   transition: all 0.2s ease-in-out;
   text-transform: uppercase;
   font-size: 12px;
@@ -72,9 +72,7 @@ button {
     }
   }
 
-
   &-update {
-    //border-radius: 50px;
     color: $apple-green;
     background-color: transparent;
     border-color: $apple-green;
@@ -82,6 +80,18 @@ button {
     &:hover {
       background-color: $apple-green;
       color: $dark-green2;
+    }
+  }
+
+  &-action {
+    color: $primary-color;
+    background-color: #fff;
+    box-shadow: 0 2px 4px 0 rgba($primary-color, 0.3);
+
+    &:hover {
+      background-color: $primary-color;
+      color: #fff;
+      box-shadow: none;
     }
   }
 
