--- a/src/assets/scss/components/_nav.scss
+++ b/src/assets/scss/components/_nav.scss
@@ -10,6 +10,10 @@
     margin: 0;
     padding: 0 10%;
     width: 90%;
+
+    @media (max-width: 400px) {
+      overflow-x: scroll;
+    }
   }
 }
 
