Create all Page models

--- a/src/assets/scss/components/_nav.scss
+++ b/src/assets/scss/components/_nav.scss
@@ -52,7 +52,8 @@
     }
 
     &:hover,
-    &.active{
+    &.active,
+    &.router-link-active {
       color: $brand-color;
 
       &::before {
@@ -61,7 +62,6 @@
     }
   }
 }
-
 
 .menu {
   width: 100%;
