--- a/src/assets/scss/ui/_lists.scss
+++ b/src/assets/scss/ui/_lists.scss
@@ -1,11 +1,11 @@
 .lists {
   list-style: none;
-  margin: 0;
-  padding: 0;
+  margin: 0 !important;
+  padding: 0 !important;
 }
 
 .title-list {
-  font-size: 14px;
+  font-size: 14px !important;
   margin: 0;
 }
 
