Layout sentences tab

--- a/src/assets/scss/_colors.scss
+++ b/src/assets/scss/_colors.scss
@@ -15,4 +15,5 @@ $grey:            #EBEBEB;
 $bg-grey:         #F8F8F8;
 $light-gray:      #efefef;
 $dark-grey:       #7F7F7F;
-
+$red:             #f4516c;
+$orange:          #F5A623;
