--- a/src/assets/scss/ui/_badges.scss
+++ b/src/assets/scss/ui/_badges.scss
@@ -14,7 +14,17 @@
   margin: 2px;
 
   &--danger {
-    background-color: #f4516c;
+    background-color: $red;
+    color: #ffffff;
+  }
+
+  &--warning {
+    background-color: $orange;
+    color: #ffffff;
+  }
+
+  &--success {
+    background-color: $apple-green;
     color: #ffffff;
   }
 }
