--- a/src/assets/scss/_grid.scss
+++ b/src/assets/scss/_grid.scss
@@ -28,5 +28,15 @@ $gap: 15px;
       width: 100%;
     }
   }
+
+  &-100 {
+    width: 100%;
+    margin: $gap 0;
+
+    @media (max-width: 768px) {
+      margin: $gap 0;
+      width: 100%;
+    }
+  }
 }
 
