--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -24,6 +24,7 @@
 
 // Add styles for components
 @import
+  'components/_chart',
   'components/_cta',
   'components/_footer-nav',
   'components/_footer',
