--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -29,6 +29,7 @@
   'components/_footer-nav',
   'components/_footer',
   'components/_header-page-bot',
+  'components/_modal-body',
   'components/_top-bar',
   'components/_modals',
   'components/_nav',
