--- a/src/assets/scss/ui/_modal.scss
+++ b/src/assets/scss/ui/_modal.scss
@@ -7,3 +7,11 @@
   height: 20px;
   width: 2px;
 }
+
+.avatar-modal {
+  width: 120px;
+  height: 120px;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto 20px auto;
+}
