--- a/src/assets/scss/ui/_lists.scss
+++ b/src/assets/scss/ui/_lists.scss
@@ -68,7 +68,11 @@
   background-color: #E3E3E3;
   width: 100%;
   border-radius: 0 0 5px 5px;
-  padding: 10px 20px;
+  padding: 0 20px;
+  .tag {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
 }
 
 .badge {
