Add Summary Item styles

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -47,6 +47,7 @@
   'components/_scrool-up',
   'components/_section-title',
   'components/_social-nav',
+  'components/_summary-item',
   'components/_submenu'
 ;
 
